--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         <div class="navbar-collapse collapse">
           <ul class="nav navbar-nav navbar-right">
             <li class="active"><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
+            <li><a href="#about">About</a></li>
             <li><a href="#works">Portfolio</a></li>
           </ul>
         </div><!--/.nav-collapse -->
@@ -65,8 +65,31 @@
 	    </div> <!-- /container -->
 	</div><! --/headerwrap -->
 
+	<section id="about"></section>
+	<div id="aboutwrap">
+		<div class="container">
+			<div class="row">
+				<div class="col-lg-6 col-lg-offset-3">
+				</div>
+			</div><! --/row -->
+		</div> <!-- /container -->
+	</div><! --/aboutwrap -->
 
-    <div id="chartWrap">
+	<div class="container">
+		<div class="row centered mt mb">
+			<div class="col-lg-8 col-lg-offset-2">
+				<h2>Jacob Ponce</h2>
+				<p>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
+				<p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
+				<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
+			</div>
+
+		</div><! --/row -->
+	</div><! --/container -->
+
+
+
+	<div id="chartWrap">
 	    <section id="work"></section>
 	    <div class="container">
             <div class="row centered mt mb">
