messed with the ticks on the bar graph:

--- a/index.html
+++ b/index.html
@@ -94,7 +94,9 @@
 	    <div class="container">
             <div class="row centered mt mb">
                 <h1 id="skill">My Skill Level</h1>
-                <canvas  id="barChart" height="300" width="300"></canvas>
+                <div style="width:100%;">
+                    <canvas  id="barChart" height="300" width="300"></canvas>
+                </div>
             </div>
         </div><! --/container -->
 	</div>
