--- a/index.html
+++ b/index.html
@@ -70,6 +70,9 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-lg-6 col-lg-offset-3">
+                    <div style="height: 70%">
+                        <img id="me" src="assets/img/me.jpg">
+                    </div>
 				</div>
 			</div><! --/row -->
 		</div> <!-- /container -->
