ready to launch

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
-    <meta name="author" content="">
+    <meta name="Jacob" content="">
     <link rel="shortcut icon" href="assets/ico/favicon.ico">
 
     <title>Jacob Ponce</title>
@@ -17,14 +17,7 @@
     <link href="assets/css/style.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
 
-    <!-- Just for debugging purposes. Don't actually copy this line! -->
-    <!--[if lt IE 9]><script src="../../assets/js/ie8-responsive-file-warning.js"></script><![endif]-->
 
-    <!-- HTML5 shim and Respond.js IE8 support of HTML5 elements and media queries -->
-    <!--[if lt IE 9]>
-      <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
-      <script src="https://oss.maxcdn.com/libs/respond.js/1.4.2/respond.min.js"></script>
-    <![endif]-->
   </head>
 
   <body>
@@ -67,27 +60,27 @@
 
 	<section id="about"></section>
 	<div id="aboutwrap">
-		<div class="container">
-			<div class="row">
-				<div class="col-lg-6 col-lg-offset-3">
-                    <div style="height: 70%">
+		<div class="container info">
+            <div class="row centered mt mb">
+                <div class="col-lg-6 col-lg-offset-2">
+                    <h2>About Me</h2>
+                    <p><img id="me" src="assets/img/me.jpg">After years of not really knowing where i fit in the job market; I finally found my calling in web development. It began with a little dabbling on Code Academy; I was hooked! I began to seek out the best ways to better my knowledge and understanding of writing code. After several searches, Google came through with a targeted ad from UCF coding bootcamp and the rest is history.
+                        <br>
 
-                    </div>
-				</div>
-			</div><! --/row -->
+                       I currently live in Orlando.  When not coding, I am usually enjoying life with my partner and best friend Mel. We love hiking, biking, exploring new and exciting places to eat, watching foreign/indie films, and just chilling together.
+                        When only having myself for company I enjoy playing video game(Mel's not a fan), watching Arsenal FC play(huge fan), and watching Game of thrones.
+                        <br>
+
+                        Some of my specialties include:
+                        html, JavaScript, CSS, PHP, jQuery, Laravel, mySQL, and node.js </p>
+                </div>
+
+            </div><! --/row -->
 		</div> <!-- /container -->
 	</div><! --/aboutwrap -->
 
 	<div class="container">
-		<div class="row centered mt mb">
-			<div class="col-lg-8 col-lg-offset-2">
-				<h2>About Me</h2>
-				<p><img id="me" src="assets/img/me.jpg"> Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged.</p>
-				<p>It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</p>
-				<p>Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old.</p>
-			</div>
 
-		</div><! --/row -->
 	</div><! --/container -->
 
 
@@ -107,29 +100,38 @@
 
 	<section id="works"></section>
 	<div class="container">
+
 		<div class="row centered mt mb">
 			<h1>My Portfolio</h1>
+			<div class="col-md-3">
+				<a href="https://obscure-sands-55186.herokuapp.com/">
+					<h3>Hangman!</h3>
+					<p>My very first app using vanilla Javascript, HTML, Bootstrap, and CSS</p>
+				</a>
+			</div>
 
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio01.png" class="img-responsive"></a>
+			<div class="col-md-3">
+				<a href="https://hidden-dawn-16425.herokuapp.com/">
+					<h3>Fun with the giphy api!</h3>
+					<p>An app that uses jQuery, giphy api, css, html, and bootstrap</p>
+				</a>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio02.png" class="img-responsive"></a>
+
+			<div class="col-md-3">
+				<a href="#">
+					<h3>coming soon!</h3>
+				</a>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio03.png" class="img-responsive"></a>
+
+			<div class="col-md-3">
+				<a href="#">
+					<h3>coming soon!</h3>
+				</a>
 			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio04.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio05.png" class="img-responsive"></a>
-			</div>
-			<div class="col-lg-4 col-md-4 col-sm-4 gallery">
-				<a href="work.html"><img src="assets/img/portfolio/folio06.png" class="img-responsive"></a>
-			</div>
-		</div><! --/row -->
-	</div><! --/container -->
+
+		</div>
+	</div>
+
 	
 	<div id="social">
 		<div class="container">
@@ -142,7 +144,7 @@
 					<a href="https://twitter.com/AFC__1886"><i class="fa fa-twitter"></i></a>
 				</div>
 				<div class="col-lg-3">
-					<a href="#"><i class="fa fa-linkedin"></i></a>
+					<a href="https://www.linkedin.com/in/jacob-ponce-a29080132/"><i class="fa fa-linkedin"></i></a>
 				</div>
 				<div class="col-lg-3">
 					<a href="https://github.com/1886afc"><i class="fa fa-github"></i></a>
