--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@
                     <p><img id="me" src="assets/img/me.jpg">After years of not really knowing where i fit in the job market; I finally found my calling in web development. It began with a little dabbling on Code Academy; I was hooked! I began to seek out the best ways to better my knowledge and understanding of writing code. After several searches, Google came through with a targeted ad from UCF coding bootcamp and the rest is history.
                         <br>
 
-                       I currently live in Orlando.  When not coding, I am usually enjoying life with my partner and best friend Mel. We love hiking, biking, exploring new and exciting places to eat, watching foreign/indie films, and just chilling together.
-                        When only having myself for company I enjoy playing video game(Mel's not a fan), watching Arsenal FC play(huge fan), and watching Game of thrones.
+                       I Just recently moved to Philly. loving it! Looking to start my web development career.  When not coding, I am usually enjoying life with my partner and best friend Mel. We love hiking, biking, exploring new and exciting places to eat, watching foreign/indie films, and just chilling together.
+                        When only having myself for company I enjoy playing video games, watching Arsenal FC play(huge fan), and watching Game of thrones.
                         <br>
 
                         Some of my specialties include:
@@ -118,14 +118,16 @@
 			</div>
 
 			<div class="col-md-3">
-				<a href="#">
-					<h3>coming soon!</h3>
+				<a href="https://peaceful-thicket-35613.herokuapp.com/">
+					<h3>The Arena!</h3>
+					<p> A group project using Spotify api, ticketmaster api, firebase, HTML CSS, and Jquery</p>
 				</a>
+
 			</div>
 
 			<div class="col-md-3">
 				<a href="#">
-					<h3>coming soon!</h3>
+					<h3>So Good! Work in progress</h3>
 				</a>
 			</div>
 
@@ -163,7 +165,7 @@
 				</div>
 			
 				<div class="col-lg-4">
-					<p>Orlando, Florida</p>
+					<p>Philadelphia, PA</p>
 				</div>
 				<div class="col-lg-4">
 					<p>Jacob.p.1886@gmail.com</p>
