--- a/index.html
+++ b/index.html
@@ -118,9 +118,9 @@
 			</div>
 
 			<div class="col-md-3">
-				<a href="https://peaceful-thicket-35613.herokuapp.com/">
-					<h3>The Arena!</h3>
-					<p> A group project using Spotify api, ticketmaster api, firebase, HTML CSS, and Jquery</p>
+				<a href="">
+
+
 				</a>
 
 			</div>
