--- a/index.html
+++ b/index.html
@@ -62,17 +62,18 @@
 	<div id="aboutwrap">
 		<div class="container info">
             <div class="row centered mt mb">
-                <div class="col-lg-6 col-lg-offset-2">
+                <div class="col-lg-10 col-lg-offset-1">
                     <h2>About Me</h2>
-                    <p><img id="me" src="assets/img/me.jpg">After years of not really knowing where i fit in the job market; I finally found my calling in web development. It began with a little dabbling on Code Academy; I was hooked! I began to seek out the best ways to better my knowledge and understanding of writing code. After several searches, Google came through with a targeted ad from UCF coding bootcamp and the rest is history.
+                    <p><img id="me" src="assets/img/me.JPG">Freelance web developer, looking to make the most out of life.
+                        Love the challenges that come with being a web developer and finding unique ways to provide a client with a great product. Always looking to better myself and learn new technologies; I'm currently learning WordPress so i can add that to my knowledge.
                         <br>
 
-                       I Just recently moved to Philly. loving it! Looking to start my web development career.  When not coding, I am usually enjoying life with my partner and best friend Mel. We love hiking, biking, exploring new and exciting places to eat, watching foreign/indie films, and just chilling together.
+                       I Just recently moved to Philly. When not coding, I am usually enjoying life with my partner and best friend Mel. We love hiking, biking, exploring new and exciting places to eat, watching foreign/indie films, and just chilling together.
                         When only having myself for company I enjoy playing video games, watching Arsenal FC play(huge fan), and watching Game of thrones.
                         <br>
 
                         Some of my specialties include:
-                        html, JavaScript, CSS, PHP, jQuery, Laravel, mySQL, and node.js </p>
+                        html, JavaScript, CSS, Bootstrap CSS,PHP, jQuery, Laravel, mySQL, and node.js </p>
                 </div>
 
             </div><! --/row -->
@@ -104,31 +105,37 @@
 		<div class="row centered mt mb">
 			<h1>My Portfolio</h1>
 			<div class="col-md-3">
+                <h3>my early jquery stuff</h3>
 				<a href="https://obscure-sands-55186.herokuapp.com/">
-					<h3>Hangman!</h3>
+					<h4>Hangman!</h4></a>
 					<p>My very first app using vanilla Javascript, HTML, Bootstrap, and CSS</p>
-				</a>
+
+                <a href="https://hidden-dawn-16425.herokuapp.com/">
+                    <h4>Fun with the giphy api!</h4></a>
+                    <p>An app that uses jQuery, giphy api, css, html, and bootstrap</p>
+
 			</div>
 
 			<div class="col-md-3">
-				<a href="https://hidden-dawn-16425.herokuapp.com/">
-					<h3>Fun with the giphy api!</h3>
-					<p>An app that uses jQuery, giphy api, css, html, and bootstrap</p>
-				</a>
+                <h3>Landing Pages</h3>
+                <a href="https://safe-lowlands-29235.herokuapp.com/">
+                <h4>Landing page made with SkeletonCSS</h4>
+                </a>
+			</div>
+
+			<div class="col-md-3">
+                <h3>Bootstrap 4 themes</h3>
+				<a href="https://quiet-falls-92985.herokuapp.com/">
+					<h4>Theme 1</h4>
+                </a>
+
 			</div>
 
 			<div class="col-md-3">
 				<a href="">
-
-
-				</a>
-
-			</div>
-
-			<div class="col-md-3">
-				<a href="#">
 					<h3>So Good! Work in progress</h3>
 				</a>
+                <p></p>
 			</div>
 
 		</div>
